<resources>
    <string name="facebook_app_id" translatable="false">1529381790486231</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1529381790486231</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">CNa7zcjO1X7FJmfCdcKzmEKCP</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">SB7FMPkxQE4L0ttaE5a6jvCCa7xVQPe6LHl3Qo2YIixAcdEhLi
</string>

    <string name="app_name">PhotoCollections</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="googleplus_icon">googleplus icon</string>
    <string name="edit_profile">edit profile</string>
    <string name="profile_picture">profile picture</string>
    <string name="cover_picture">cover picture</string>
    <string name="capture_moment_button">capture moment button</string>
    <string name="my_albums_button">my albums button</string>
    <string name="create_new_album_button">create new album button</string>
    <string name="my_moments_button">my moments button</string>
    <string name="my_albums">my albums</string>
    <string name="create_new_album">+ create new album</string>
    <string name="capture_moments">+ capture moments</string>
    <string name="my_moments">my favourite moments</string>
    <string name="invalidEmail">Enter a valid Email</string>
    <string name="passwordMatch">Passwords must match</string>
    <string name="loginCancel">Authentication denied</string>
    <string name="error">An error occurred</string>
    <string name="next">Next</string>
    <string name="prev">Back</string>
    <string name="create">Create</string>
    <string name="give_your_album_a_name">Give your album a name, eg My Wedding Pictures, Home Coming 2017 etc</string>
    <string name="album_name">Album name</string>
    <string name="album_description">Album Description</string>
    <string name="album_description_story">A little description of what your album is about. This will help your friends know why they should help capture your moments</string>
    <string name="_1000">1000</string>
    <string name="album_date_story">We want to create a reminder for you and your friends, about your event</string>
    <string name="number_pictures">Maximuim number of pictures</string>
    <string name="_50_friends">50 friends</string>
    <string name="no_of_friends_that_can_capture_your_moments">Number of friends that can capture your moments</string>
    <string name="_20">$ 20</string>
    <string name="plus">Plus</string>
    <string name="choose_plan">Choose a plan that best suits you</string>
    <string name="_10">$ 10</string>
    <string name="_500">500</string>
    <string name="_20_friends">20 friends</string>
    <string name="pro">Pro</string>
    <string name="_100">100</string>
    <string name="basic">Basic</string>
    <string name="_5_friends">5 friends</string>
    <string name="free">Free</string>
    <string name="premuim">Premuim</string>
    <string name="_50">$ 50</string>
    <string name="unlimited_friends">Unlimited friends</string>
    <string name="unlimited">Unlimited</string>
    <string name="titleValidation">Please enter album name</string>
    <string name="descValidation">Please enter album description</string>
    <string name="dateValidation">Please pick a date</string>
    <string name="my_albums_title">My Albums</string>
    <string name="albumimage">albumImage</string>
    <string name="moment_image">moment image</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="enterOldpassword">Enter old Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="confirmNewpass">Confirm new password</string>
    <string name="momentDeleteFailure">"Moment not deleted, try again later"</string>
    <string name="momentDeleteSuccess">"Moment deleted"</string>
    <string name="momentAddToFavSuc">"Moment added to favourites"</string>
    <string name="momentAddToFavFail">"Moment not added, try again later"</string>
    <string name="titleFav">My Favourite Moments</string>
    <string name="passUpdated">Password Update Successful</string>
    <string name="passUpdateFail">Password update failed</string>
    <string name="enterAll">Please enter all details</string>
    <string name="chooseImage">Choose an Image</string>
    <string name="onlyOwnerDel">Only the album owner can delete this</string>
    <string name="uploadFail">Upload failed</string>
    <string name="uploadSucc">Updates successful</string>

    <string name="capture">Help me capture my moments</string>
    <string name="album_date">Pick a date for your event</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="capture_moment">Capture Moments</string>
    <string name="on">ON</string>
    <string name="albumDeleteFail">Could not delete album, Try again later</string>
    <string name="albumDeleteSucc">Album Deleted!</string>
    <string name="off">OFF</string>
    <string name="select_an_album">Select an Album</string>
    <string name="permission">PhotoCollections needs to access your gallery in order to add your moments to your albums</string>
    <string name="toggle_the_switch_on_to_automatically_add_all_new_images_and_videos_to_the_album">Toggle the switch on to automatically add all new images and videos to the album</string>
    <string name="now_just_open_your_favourite_camera_app_and_start_capturing_your_moments">Now just open your favourite camera app and start capturing your moments</string>
    <string name="shareBtn">Share Button</string>
    <string name="deleteBtn">Delete Button</string>
    <string name="favBtn">Add to favourite button</string>
    <string name="select">Select</string>
    <string name="nothingSelected">No moment selected</string>
    <string name="share_image">Share Image</string>
    <string name="share_video">Share Video</string>
    <string name="shareFail">Share Failed</string>
    <string name="start_capturing_moments">Start Capturing Moments</string>
    <string name="imageSaved">Image saved</string>
    <string name="saveBtn">Save Button</string>
    <string name="purchaseSuccessful">Purchase successful</string>
    <string name="purchaseFail">Purchase Failed</string>
</resources>
