<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ladrope.venpix.controller.home">

    <ImageView
        android:id="@+id/coverPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cover_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/garden" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/paschal" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:padding="10dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <ImageView
        android:id="@+id/captureMoments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/capture_moment_button"
        android:foreground="#c0000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/myMoments"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/createAlbum"
        app:srcCompat="@drawable/photo" />

    <ImageView
        android:id="@+id/myMoments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="76dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/my_moments_button"
        android:foreground="#c0000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="@+id/captureMoments"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:srcCompat="@drawable/garden1" />

    <ImageView
        android:id="@+id/createAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/create_new_album_button"
        android:foreground="#c0000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/myAlbums"
        app:layout_constraintDimensionRatio="w,9:16"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/myAlbums"
        app:srcCompat="@drawable/album" />

    <ImageView
        android:id="@+id/myAlbums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/my_albums_button"
        android:foreground="#c0000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/myMoments"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/wedding" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/create_new_album"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/createAlbum"
        app:layout_constraintEnd_toEndOf="@+id/createAlbum"
        app:layout_constraintStart_toStartOf="@+id/createAlbum"
        app:layout_constraintTop_toTopOf="@+id/createAlbum" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/capture_moments"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/captureMoments"
        app:layout_constraintEnd_toEndOf="@+id/captureMoments"
        app:layout_constraintStart_toStartOf="@+id/captureMoments"
        app:layout_constraintTop_toTopOf="@+id/captureMoments" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/my_albums"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myAlbums"
        app:layout_constraintEnd_toEndOf="@+id/myAlbums"
        app:layout_constraintStart_toStartOf="@+id/myAlbums"
        app:layout_constraintTop_toTopOf="@+id/myAlbums" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/my_moments"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/myMoments"
        app:layout_constraintEnd_toEndOf="@+id/myMoments"
        app:layout_constraintStart_toStartOf="@+id/myMoments"
        app:layout_constraintTop_toTopOf="@+id/myMoments" />

</android.support.constraint.ConstraintLayout>
