<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ladrope.venpix.controller.Settings">

    <ImageView
        android:id="@+id/settingCoverImage"
        android:layout_width="0dp"
        android:layout_height="241dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cover_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/garden" />

    <ImageView
        android:id="@+id/settingsProfileImage"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/paschal" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <EditText
        android:id="@+id/settingsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:hint="@string/enter_name" />

    <Button
        android:id="@+id/settingsSaveBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:onClick="saveInfo"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangePassword" />

    <ImageButton
        android:id="@+id/settingsCoverImageEdtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cover_picture"
        android:onClick="changeCoverImage"
        app:layout_constraintBottom_toBottomOf="@+id/settingCoverImage"
        app:layout_constraintEnd_toEndOf="@+id/settingCoverImage"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/settingsChangeProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/change_profile_picture"
        android:onClick="changeUserImage"
        app:layout_constraintBottom_toBottomOf="@+id/settingsProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/settingsProfileImage"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <EditText
        android:id="@+id/settingsEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsName" />

    <TextView
        android:id="@+id/settingsChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:onClick="settingsChangePassword"
        android:padding="5dp"
        android:text="@string/change_password"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsEmail" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_border"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingCoverImage" />

    <ProgressBar
        android:id="@+id/settingsProgressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
